<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsRename"
        android:text="@string/settings_rename_txt"
        android:textSize="@dimen/settings_txt_size"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsReset"
        android:text="@string/settings_reset_txt"
        android:textSize="@dimen/settings_txt_size"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsDelete"
        android:text="@string/settings_delete_txt"
        android:textSize="@dimen/settings_txt_size"
        android:gravity="center"/>

</LinearLayout>